feat: Convert to Railway deployment
- Remove Cloudflare/Vite dependencies
- Add Node.js server entry point (server.ts)
- Add Railway config (railway.json, Procfile, nixpacks.toml)
- Update package.json for Railway deployment
- Fix TypeScript strict type errors
- Update README with Railway deployment instructions

--- a/.gitignore
+++ b/.gitignore
@@ -3,28 +3,35 @@ node_modules/
 
 # Build output
 dist/
-.wrangler/
 
-# Environment files
+# Environment variables
 .env
-.dev.vars
-
-# PM2
-.pm2/
-pids/
-logs/
-*.log
+.env.local
+.env.*.local
 
 # IDE
 .vscode/
 .idea/
+*.swp
+*.swo
 
 # OS
 .DS_Store
 Thumbs.db
 
-# Backup files
-*.backup
-*.bak
-*.tar.gz
-*.zip
+# Logs
+*.log
+npm-debug.log*
+
+# Runtime
+pids/
+*.pid
+*.seed
+*.pid.lock
+
+# Test coverage
+coverage/
+
+# PM2
+.pm2/
+ecosystem.config.cjs
