--- a/package.json
+++ b/package.json
@@ -1,20 +1,35 @@
 {
-  "name": "webapp",
+  "name": "hanwha-ocean-scm",
+  "version": "1.0.0",
+  "description": "한화오션 SCM 납기관리 AI Agent - Delivery Management System",
   "type": "module",
+  "main": "dist/server.js",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "wrangler pages dev",
-    "deploy": "npm run build && wrangler pages deploy",
-    "cf-typegen": "wrangler types --env-interface CloudflareBindings"
+    "dev": "tsx watch src/server.ts",
+    "build": "tsc && cp -r public dist/",
+    "start": "node dist/server.js",
+    "preview": "npm run build && npm start",
+    "typecheck": "tsc --noEmit"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   },
   "dependencies": {
+    "@hono/node-server": "^1.19.9",
     "hono": "^4.11.7"
   },
   "devDependencies": {
-    "@hono/vite-build": "^1.2.0",
-    "@hono/vite-dev-server": "^0.18.2",
-    "vite": "^6.3.5",
-    "wrangler": "^4.4.0"
-  }
+    "@types/node": "^20.10.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.0"
+  },
+  "keywords": [
+    "hanwha-ocean",
+    "scm",
+    "delivery-management",
+    "ai-agent",
+    "hono"
+  ],
+  "author": "Hanwha Ocean SCM Team",
+  "license": "MIT"
 }
